# MCPOrchestration

./: .antigravity.mcp.json  .dockerignore  .gitignore  Dockerfile  Dockerfile.kb  FEC_CR_Builder.code-workspace  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  jira.conf  kb-config.yml  mcp-config-sample.json  mcp.json  pom.xml  settings.gradle.kts
docs/: MCP-SO-ISSUE-TEMPLATE.md  MCP-SO-SUBMISSION.md  REQUEST_MCP_DETAILS.md
documents/: BACKLOG-bridge-code-intelligence.md  BACKLOG-graph-viewer-3d-rendering.md
gradle/: libs.versions.toml
kb-server/: build.gradle.kts  pom.xml
mcp-bridge-bash/: README.md  mcp-bridge.sh
mcp-bridge-cmd/: README.md  mcp-bridge.cmd
mcp-bridge-powershell/: README.md  mcp-bridge.ps1
mcp-bridge-python/: README.md  pyproject.toml
mcp-bridge-python/src/mcp_bridge/: __init__.py  __main__.py  bridge_server.py  config.py  health_check.py  http_client.py  local_tools.py  models.py  reconnection.py  url_manager.py
mcp-bridge-python/src/mcp_bridge/code_intel/: __init__.py  database.py  extractor.py  scanner.py  tools.py
mcp-bridge-python/src/mcp_bridge/embedding/: __init__.py  embedding_fallback.py  model_downloader.py  onnx_inference.py
mcp-bridge-python/src/mcp_bridge/local/: __init__.py  config_watcher.py  local_server_manager.py  server_process.py  stdio_json_rpc.py
mcp-bridge-python/src/mcp_bridge/registry/: __init__.py  unified_registry.py
mcp-bridge-python/src/mcp_bridge/routing/: __init__.py  routing_table.py  smart_router.py
mcp-bridge-python/tests/: test_url_manager.py
mcp-client-bridge/: .gitignore  README.md  jest.config.js  package-lock.json  package.json
orchestrator-bridge/: build.gradle.kts  pom.xml
orchestrator-client/: build.gradle.kts  pom.xml
orchestrator-core/: build.gradle.kts  pom.xml
orchestrator-server/: build.gradle.kts  pom.xml
requirement/: mcp_orchestration.md
static/: graph-viewer.html
sync-pipeline/: build.gradle.kts  pom.xml
(+1516 files in other folders)
