[project]
name = "mcp-bridge-python"
version = "1.0.0"
description = "MCP Bridge Client for Python — connects to MCP Orchestrator via HTTP Streamable"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.scripts]
mcp-bridge-python = "mcp_bridge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
