[project]
name = "mcp-orchestrator-bridge"
version = "1.0.2"
description = "MCP Orchestrator Bridge for Python — semantic tool discovery, dynamic execution, health check, auto-reconnect. Connects AI agents to MCP Orchestrator Server."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Duc Nguyen", email = "dnguyenminh@hotmail.com"}]
keywords = ["mcp", "model-context-protocol", "bridge", "orchestrator", "ai", "tools", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/dnguyenminh/MCPOrchestration"
Repository = "https://github.com/dnguyenminh/MCPOrchestration"
Issues = "https://github.com/dnguyenminh/MCPOrchestration/issues"

[project.scripts]
mcp-orchestrator-bridge = "mcp_bridge.__main__:main"
mcp-bridge = "mcp_bridge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
